--- a/slides.html
+++ b/slides.html
@@ -390,6 +390,15 @@
       </div>
       <div class='spacer bottom'></div>
     </section>
+    <section class='slide'>
+      <div class='spacer top'></div>
+      <div class='content'>
+        <h1>What about making your classes small and single responsibility?</h1>
+        
+        <h2>Makes it easier for people to learn your API.</h2>
+      </div>
+      <div class='spacer bottom'></div>
+    </section>
     <section class='bottom-left full-background mileage slide'>
       <div class='spacer top'></div>
       <div class='content'>
